--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=abd_shop_db
+DB_DATABASE=mehdideh_online_shop
 DB_USERNAME=root
 DB_PASSWORD=
 
