--- a/.env
+++ b/.env
@@ -22,11 +22,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=online-shop
 DB_PORT=3306
 DB_DATABASE=mehdideh_online_shop
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=8s3sApf4BCEqiXDGw3GnZ5Uj
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
