--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=online-shop
 DB_PORT=3306
 DB_DATABASE=mehdideh_online_shop
 DB_USERNAME=root
