--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:BK7lA/mqohmWg6L+nD2vW6thRQOHLDalDLcN7ezeuAE=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -22,10 +22,12 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mariadb
 DB_HOST=online-shop
+# DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=mehdideh_online_shop
 DB_USERNAME=root
 DB_PASSWORD=8s3sApf4BCEqiXDGw3GnZ5Uj
+# DB_PASSWORD=
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
