--- a/.env
+++ b/.env
@@ -21,12 +21,12 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mariadb
-DB_HOST=online-shop
-# DB_HOST=127.0.0.1
+# DB_HOST=online-shop
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=mehdideh_online_shop
-DB_USERNAME=root
-DB_PASSWORD=8s3sApf4BCEqiXDGw3GnZ5Uj
+DB_USERNAME=crsshahe_abd
+DB_PASSWORD=sap{xgQ%56Q(
 # DB_PASSWORD=
 
 SESSION_DRIVER=file
